toolchain/internal/core/analysis/testdata/errors/structure/duplicate_field_inline.vdl
// @expect: E701

type Envelope {
  payload {
    value string
    value string
  }
}
